[gd_scene load_steps=2 format=3 uid="uid://035aqb1motrn"]

[ext_resource type="Script" path="res://src/narrative/debug/sequence_state.gd" id="1_0k247"]

[node name="SequenceState" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0k247")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Container" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/Container"]
layout_mode = 2
theme_override_colors/font_color = Color(0.546, 0.7, 0.656367, 1)
text = "Id"

[node name="IdLabel" type="Label" parent="VBoxContainer/Container"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/Container"]
layout_mode = 2
theme_override_colors/font_color = Color(0.546, 0.7, 0.656367, 1)
text = "Trigger"

[node name="TriggerLabel" type="Label" parent="VBoxContainer/Container"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer/Container"]
layout_mode = 2
theme_override_colors/font_color = Color(0.546, 0.7, 0.656367, 1)
text = "Played"

[node name="FinishedButton" type="CheckBox" parent="VBoxContainer/Container"]
unique_name_in_owner = true
layout_mode = 2
disabled = true

[node name="Label4" type="Label" parent="VBoxContainer/Container"]
layout_mode = 2
theme_override_colors/font_color = Color(0.546, 0.7, 0.656367, 1)
text = "Ready"

[node name="ReadyButton" type="CheckBox" parent="VBoxContainer/Container"]
unique_name_in_owner = true
layout_mode = 2
disabled = true

[node name="Label5" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.546, 0.7, 0.656367, 1)
text = "Requirements"

[node name="Requirements" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
